# k-AnonymityDataExperiments

./: LICENSE  README.md  anonymize_demo.py  diffprivlib_demo.py  mostlyai_demo.py  opendp_demo.py  pyproject.toml  smartnoisesql_demo.py
hierarchies/: age.csv  gender.csv  zipcode.csv
input_data/: patient_data.csv
