[project]
name = "k-anonymitydataexperiments"
version = "0.1.0"
description = "k-anonymitydataexperiments, Python based libraries demo compared to ARX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anjana>=1.2.2",
    "diffprivlib>=0.6.6",
    "pandas>=2.3.3",
    "pycanon>=1.3.5",
    "scikit-learn<1.9",
]
